--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,117 @@
-.App {
-  text-align: center;
+body {
+  font-family: "Open Sans", serif;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.wrapper {
+  background: linear-gradient(to right, #e67e22, #e74c3c);
+  height: 100vh;
+  width:100%;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.main {
+  height: 90vh;
+  background: #fff;
+  box-shadow: 0px 13px 40px -13px rgba(0,0,0,0.75);
+  width: 70%;
+  margin: 0 auto;
+}
+
+.title-container {
+  height: 90vh;
+  background: url("img/bg.jpg") center center no-repeat;
+  background-size: cover;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
+  color: #000;
 }
 
-.App-link {
-  color: #61dafb;
+.title-container_title {
+  font-size: 40px;
+  letter-spacing: 2px;
+  line-height: 1.3;
+  font-family: "Merriweather", serif;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form-container {
+  background-color: #2c3e50;
+  height: 90vh;
+  padding-top: 80px;
+  padding-left: 50px;
+}
+
+input[type="text"] {
+  background-color: transparent;
+  border: 0;
+  border-bottom: solid 0.5px #f16051;
+  width: 100%;
+  padding-bottom: 4px;
+  color: #fff !important;
+  font-weight: lighter;
+  letter-spacing: 2px;
+  margin-bottom: 30px;
+  margin-right: 20px;
+  font-size: 20px;
+}
+
+input[type="text"] { 
+    outline: none;
+}
+
+input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0 30px #2c3e50 inset;
+    -webkit-text-fill-color: #fff !important;
+}
+
+button {
+  border: 0;
+  padding: 8px 20px;
+  margin: 0 2px;
+  border-radius: 2px;
+  font-weight: lighter;
+  letter-spacing: 1px;
+  font-size: 15px;
+  cursor: pointer;
+  background-color: #f16051;
+  color: #fff;
+  font-weight: 100;
+}
+
+button:active {
+  outline: none;
+}
+
+.weather_info {
+  width: 50%;
+  padding-top:20px;
+  font-size: 20px;
+  font-weight: 100;
+  letter-spacing: 2px;
+}
+
+.weather_key {
+  color: #f16051;
+  /* border-bottom: solid 2px rgba(255,255,255,0.06); */
+  padding: 5px 0 5px 0;
+  font-weight: 200;
+}
+
+.weather_key:last-child {
+  border: 0;
+}
+
+.weather_value {
+  color: #fff;
+  font-weight: 100;
+}
+
+.weather_error {
+  color: #f16051;
+  font-size: 20px;
+  letter-spacing: 1px;
+  font-weight: 100;
 }
